# svg-metadata

./: Cargo.toml  LICENSE-APACHE  Makefile  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs
tests/: fixtures.rs
