[package]
name = "svg_metadata"
version = "0.6.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2024"
description = "Extracts metadata (like the viewBox, width, and height) from SVG graphics"
license = "Apache-2.0/MIT"
keywords = ["svg", "graphics", "image", "metadata"]
repository = "https://github.com/mre/svg-metadata"
categories = ["graphics", "multimedia", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.20.0"
regex = "1.11.1"
doc-comment = "0.3.3"
once_cell = "1.21.3"

[dev-dependencies]
doc-comment = "0.3.3"

[lints.rust]
invalid_html_tags = "warn"
absolute_paths_not_starting_with_crate = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
semicolon_in_expressions_from_macros = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
variant_size_differences = "warn"
anonymous_parameters = "deny"
macro_use_extern_crate = "deny"
missing_docs = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
missing_const_for_fn = "warn"
